<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Begonet</string>
    <string name="pause">Pause</string>
    <string name="play">Play</string>
    <string name="flipping_started">Flipping Started...</string>
    <string name="flipping_stopped">Flipping Stopped...</string>
    <string name="project_owner">Project Owner</string>
    <string name="project_title">Project Title</string>
    <string name="project_history">Save the Children is the world\'s leading independent organisation for children. We work in around 120 countries. We save children\'s lives; we fight for their rights; we help them fulfil their potential</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="hyperlink">\n<a href="https://www.youtube.com/watch?v=mI7G9LJ6fNg">Continue as a Guest</a></string>
    <string name="signUpBar">                          SignUp</string>
    <string name="signup">SignUp</string>
    <string name="full_name">Full Name</string>
    <string name="phone_number">Phone Number</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="email_or_phone_number">Email or Phone Number</string>
    <string name="skip">skip</string>
    <string name="if_you_don_t_have_any_account_yet">If you don\'t have any account yet</string>
    <string name="skip_main">Skip</string>
    <string name="about_begonet">About Begonet</string>
    <string name="new_projects">New Projects</string>
    <string name="bookmarked_project">Bookmarked Project</string>
    <string name="setting">Setting</string>
    <string name="nebiyu_zewdu">Nebiyu Zewdu</string>
    <string name="_21_new">21 New</string>
    <string name="_2">2</string>

    <string-array name="choose_role">
        <item>Volunteer</item>
        <item>NGO</item>
    </string-array>

    <string-array name="choose_language">
        <item>English</item>
        <item>Amharic</item>
        <item>Arabic</item>
    </string-array>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="setting_page">Setting</string>
    <string name="home">Home</string>
    <string name="language">Language</string>
    <string name="location">Location</string>
    <string name="chat_active">Chat Active</string>
    <string name="automatic_update">Automatic Update</string>
    <string name="periodic_donation_reminder">Periodic Donation Reminder</string>
    <string name="about_us">About Us</string>
    <string name="begonet">Begonet</string>
    <string name="begonet_description"><![CDATA[Begonet is a platform that connects individual or group of volunteers, Charity organizations, Donors, Sponsors & Those in need of support. It creates a volunteering opportunities, and anyone can provide materials, financial, professional sevice or Labor work.]]></string>
    <string name="awards_and_recognitions">Awards and Recognitions</string>
    <string name="best_of_the_best">Best of the Best</string>
    <string name="bego_sew_award">Bego Sew Award</string>
    <string name="national_theater_of_ethiopia">National Theater of Ethiopia</string>
    <string name="join_now">Join Now</string>
    <string name="_132_joined">132 Joined</string>

    <string name="passwordProviderType">password</string>
    <string name="fragmentSelectorChooseRole">Choose your role</string>
    <string name="selectorFragmentNGO">NGO</string>
    <string name="selectorFragmentVolunteer">Volunteer</string>
    <string name="selectorFragmentNext">Next</string>
    <string name="selectorFragmentTryAgain">Please try again</string>
    <string name="authFragmentEmailSent">we sent you email, please verify and log in again!</string>
    <string name="authFragmentFailedToSendEmail">Failed to send email verification, please try again</string>
    <string name="authFragmentAuthCanceled">Auth Canceled!</string>
    <string name="authFragmentCheckYourConnection">Please check your connection and try again.</string>
    <string name="authFragmentUnknownError">Unknown error occurred, please try again.</string>
    <string name="menuHome">Home</string>
    <string name="menuAbout">About</string>
    <string name="menuSettings">Settings</string>
    <string name="menuNewProjects">Projects</string>
    <string name="menuBookmarks">Bookmarked Projects</string>
    <string name="menuProfile">Profile</string>


    <string name="google_maps_key" templateMergeStrategy="preserve" translatable="false">AIzaSyB8fLnyeWyIxfVOOvvXrixZzDTzTeZk-oo</string>
    <string name="title_activity_maps">Map</string>
</resources>